@@ -35,6 +35,7 @@ fullscreen	F
 compact	Ctrl+C
 video_equalizer	Ctrl+E
 screenshot	S
+multiple_screenshots	Shift+D
 video_preview	
 flip	
 mirror	
@@ -51,6 +52,7 @@ decrease_volume	9, /
 increase_volume	0, *
 dec_audio_delay	-
 inc_audio_delay	+
+audio_delay	
 load_audio_file	
 unload_audio_file	
 extrastereo_filter	
@@ -60,6 +62,7 @@ load_subs
 unload_subs	
 dec_sub_delay	Z
 inc_sub_delay	X
+sub_delay	
 dec_sub_pos	R
 inc_sub_pos	T
 dec_sub_scale	Shift+R
@@ -162,6 +165,7 @@ rotate_counterclockwise_flip
 on_top_always	
 on_top_never	
 on_top_playing	
+toggle_stay_on_top	
 dvdnav_up	Shift+Up
 dvdnav_down	Shift+Down
 dvdnav_left	Shift+Left
